# feedee

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.prod.yaml  compose.yaml  db.sqlite3  go.mod  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
apps/rssapp/: admin.py  api_urls.py  apps.py  backends.py  context_processors.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/rssapp/management/commands/: load_demo_data.py
apps/rssapp/migrations/: 0001_initial.py  0002_articleuserstate.py  0003_article_feed.py  0004_article_content_article_summary_feed_category_and_more.py  0005_tag_bookmark_tag_uniq_user_tag_slug_and_more.py  0006_article_image_url.py  0008_alter_bookmark_title.py  0016_add_is_favorite_to_user_states.py  0017_category_hierarchy_and_color_choices.py  0018_feed_is_public.py
apps/rssapp/templatetags/: timesince_en.py  vite.py
config/: urls.py
config/settings/: base.py  development.py  production.py
docker/: entrypoint.sh  nginx.conf
frontend/css/: main.css
frontend/js/: main.js
rss_worker/: Dockerfile  main.go
static/css/: article-prose.css
templates/: base.html
templates/auth/: login.html  signup.html
templates/bookmarks/: bookmark_form.html  bookmark_list.html  bookmarks_page.html  tag_list.html
templates/includes/: _pagination.html
templates/rss/: _article_card.html  dashboard.html  feed_articles.html  feed_settings.html  feeds_page.html  reader_view.html  settings.html  settings_rss.html
