[project]
name = "feedee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=5.2,<6.0",
  "djangorestframework>=3.17,<4.0",
  "beautifulsoup4>=4.14.3",
  "requests>=2.33.0",
  "gunicorn>=23.0",
  "psycopg[binary]>=3.2",
  "nh3>=0.3.4",
  "django-import-export>=4.0",
]
